# gistx

./: .gitignore  CLAUDE.md  GEMINI.md  gist_info.yaml  gist_info_3.yaml  new_pyproject.toml  pyproject.toml  x.toml
_private/: _subcommand_fix_requiement.md  add.txt  add_force_subcommand_clone-requirement.md  add_force_subcommand_clone-spec.md  clone_sub_command-requirement.md  fix-validation-procedure.md  fix_sub_command-spec.md  subcommand_clone-requirement.md  subcommand_clone-spec.md  subcommand_fix-requirement.md  subcommand_fix-spec.md  subcommand_setup-requirement.md
_private/20260313/: add-comment-req.md  add-comment-spec.md  add_type_info-req.md  add_type_info-spec.md
docs-old/: class_clix-spec.md  subcommand_clone-spec.md  subcommand_setup-spec.md
docs/spec/: spec_appconfigx.md  spec_clix.md  spec_command_clone.md  spec_command_fix.md  spec_command_setup.md  spec_gistinfo.md  spec_gistx.md
private/20260115/: workflow.md
private/20260221/: memo-auth.md
private/20260222/: spec.md
src/gistx/: __init__.py  appconfigx.py  applogger.py  cli.py  clix.py  command_clone.py  command_fix.py  command_setup.py  gistinfo.py  gistx.code-workspace  gistx.py  main.py  tomlx.py  x.py
tests/: conftest.py  test_command_clone_unit.py  test_command_fix_run.py  test_command_fix_unit.py  test_fix_cli_smoke.py
