[project]
name = "gistx"
version = "0.1.0"
description = "clone all my gist to local PC."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pathlib>=1.0.1",
    "requests>=2.32.5",
    "yklibpy",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
]
[project.scripts]
gistx  = "gistx.x:mainx"
x = "gistx.x:mainx"
check = "gistx.x:check"
check2 = "gistx.x:check2"
check3 = "gistx.x:check3"

[tool.hatch.build.targets.wheel]
packages = ["src/gistx", "src"]

[tool.uv]
package = true

[tool.uv.sources]
yklibpy = { path = "../yklibpy" }
