[project]
name = "gistx"
version = "0.1.0"
description = "clone all my gist to local PC."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mypy>=1.19.1",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
    "yklibpy",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
]
[project.scripts]
gistx  = "gistx.gistx:mainx"
x = "gistx.gistx:mainx"
check = "gistx.gistx:check"
check2 = "gistx.gistx:check2"
check3 = "gistx.gistx:check3"

[tool.hatch.build.targets.wheel]
packages = ["src/gistx", "src"]

[tool.uv]
package = true

[tool.uv.sources]
yklibpy = { path = "../yklibpy" }
