[project]
name = "gistx"
version = "0.1.0"
description = "clone all my gist to local PC."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [ "mypy>=1.19.1", "pathlib>=1.0.1", "requests>=2.32.5", "types-requests>=2.32.4.20260107", "yklibpy",]

[dependency-groups]
dev = [
 "mypy>=1.19.1",
 "pytest>=9.0.2",
 "ruff>=0.14.11",
 "ty>=0.0.11",
]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.14"
files = [ "src",]
[[tool.mypy.overrides]]
module = [ "yklibpy.*",]
follow_imports = "skip"
ignore_missing_imports = true

[project.scripts]
gistx = "gistx.gistx:mainx"

[tool.uv.sources.yklibpy]
path = "../yklibpy"
editable = true

[tool.hatch.build.targets.wheel]
packages = [ "src/gistx", "src",]
